# ollamaBench

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  pyproject.toml
comp_bench_out/: comparative_results.html
examples/: bench_suite (M3MPRO14's conflicted copy 2025-11-01).yaml  bench_suite.yaml
src/ollama_bench.egg-info/: PKG-INFO  PKG-INFO (M3MPRO14's conflicted copy 2025-11-01)  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ollamabench/: __init__.py  bench.py  cli.py  io.py  report.py  schemas.py  system.py
tests/: test_cli.py  test_metrics.py  test_schemas.py
